flux/apps/maintainerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: maintainerr
  name: maintainerr
  namespace: multimedia-factory
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/matchTag: "true"
    uptime-kuma.io/enabled: "true"
    uptime-kuma.io/type: "http"
    uptime-kuma.io/url: "http://maintainerr.multimedia-factory.svc:6246"
    uptime-kuma.io/name: "maintainerr"
    uptime-kuma.io/interval: "60"
    uptime-kuma.io/retries: "3"
    uptime-kuma.io/notifications: "Monitoring Bot"
    uptime-kuma.io/group: "Monitoring & Observability"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maintainerr
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      containers:
        - name: maintainerr
          image: ghcr.io/maintainerr/maintainerr
          imagePullPolicy: Always
          ports:
            - containerPort: 6246
          volumeMounts:
            - mountPath: /opt/data
              name: maintainerr-config
      volumes:
        - name: maintainerr-config
          persistentVolumeClaim:
            claimName: maintainerr-config
