flux/apps/maintainerr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: maintainerr
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:OBAq8R2IJt/HRyxz8/lx5ZM/c3lqWaR0R39E84xfh1SM,iv:0X/OUwu6EFapaNYiBgXA/JrkmV4EG5RwKhU9V3hWhHw=,tag:jNRMbPARjHLH6PYUR65FMw==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: maintainerr
              port: 6246
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGT28xdmx3b3N0VURNUHpt
[...]
            27WZYBXBO+wYNWgu2VnVj7AM1/5GtLFwfBzz/JTMofxXNQFg4hkI0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-01-15T09:36:09Z"
    mac: ENC[AES256_GCM,data:Dsga6iXl4QKLVv58iLL1sph16MCfYJVdSag1eZSzu3rHjdYeT3sDc5IN2PrtbEYFJl8zWgxMIM0ROXEHL2SqMBEBeeXUFqNGlTo7tYgivlKZrSqeMnhdqh8071JvqOydZfeEjlPrXbt0pK7tPtXKodWMesNHyNMA1pfV0aCZmcQ=,iv:EadTnH2GmkbtWoB3Aipu1ahk6Fte4TyZvLqsJLsyQf4=,tag:PcIxZFYCrc0EumY8S48aVQ==,type:str]
    encrypted_regex: hostnames|0
    version: 3.11.0
